// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render checkbox 1`] = `
<input
  aria-label="checkbox"
  className="pf-c-check"
  data-ouia-component-id="OUIA-Generated-RHI/Input-true-1"
  data-ouia-component-type="RHI/Input"
  data-ouia-safe={true}
  type="checkbox"
  widget-id="some-id"
/>
`;

exports[`Input component should render labeled input 1`] = `
<label
  className="pf-c-form__label"
  htmlFor="some-name"
>
  <Input
    id="some-name"
    name="some-name"
    type="text"
    widget-id="some-id"
  />
   
</label>
`;

exports[`Input component should render radio 1`] = `
<input
  aria-label="radio"
  className="pf-c-check"
  data-ouia-component-id="OUIA-Generated-RHI/Input-true-2"
  data-ouia-component-type="RHI/Input"
  data-ouia-safe={true}
  type="radio"
  widget-id="some-id"
/>
`;

exports[`Input component should render text 1`] = `
<input
  aria-label="text"
  className="pf-c-form-control"
  data-ouia-component-id="OUIA-Generated-RHI/Input-true-3"
  data-ouia-component-type="RHI/Input"
  data-ouia-safe={true}
  type="text"
  widget-id="some-id"
/>
`;
